# HyperSPI-4Segment

./: .gitmodules  README.md
include/: base.h
rp2040/: CMakeLists.txt  hyperspi.cpp
